src/objects/Account_Link__c.object
<CustomObject>
    <description>This Object will store Dexcom and SF Account Ids with Username</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Custom Field will store Salesforce Account Id</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Links</relationshipLabel>
        <relationshipName>Account_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dexcom_Account_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This custom field will store Dexcom Account GUID</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Dexcom Account Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>This Custom Field will store the Dexcom username</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Account Link</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>AccountLink</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>